Update app translation for indonesian

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,201 +1,207 @@
 {
-  "innovation_in_every_dimension" : "Innovation in every dimension",
-  "establishing_connection_to_server" : "Establishing connection to server",
-  "aggregate_metadata" : "Aggregate metadata",
-  "Event_and_tracker_metadata" : "Event & tracker metadata",
-  "report_metadata" : "Report metadata",
-  "enter_server_address" :"Enter server address",
-  "enter_username" : "Enter username",
-  "enter_password" : "Enter password",
-  "login" : "Login",
-  "powered_by" : "Powered by",
-  "offline_instances" : "Offline instances",
+  "innovation in every dimension": "Innovation in every dimension",
+  "establishing connection to server": "Establishing connection to server",
+  "aggregate metadata": "Aggregate metadata",
+  "Event and tracker metadata": "Event & tracker metadata",
+  "report metadata": "Report metadata",
+  "enter_server address": "Enter server address",
+  "enter_username": "Enter username",
+  "enter_password": "Enter password",
+  "login": "Login",
+  "powered by": "Powered by",
+  "offline instances": "Offline instances",
   "or": "or",
-  "apps" : "Apps",
-  "account" : "Account",
-  "about" : "About",
-  "synced" : "Synced",
-  "not_synced" : "Not synced",
-  "profile" : "Profile",
-  "help" : "Help",
-  "logout" : "Logout",
-  "settings" : "Settings",
-  "app_settings" : "App setting",
-  "current_language" : "Current language",
-  "synchronization" : "Synchronization",
-  "auto_sync" : "Auto sync",
-  "minutes" : "Minutes",
-  "hours" : "Hours",
-  "form_label" : "Form Label",
-  "display_name" : "Display Name",
-  "form_name" : "Form Name",
-  "form_layout" : "Form Layout",
-  "list_layout" : "List layout",
-  "table_layout" : "Table layout",
-  "data_element_per_page" : "Data elements per page(max)",
-  "dashboard" : "Dashboard",
-  "there_no_dashboard_found" : "There are no dashboard found",
-  "search_dashboard_by_name" : "Search dashboard by name",
-  "dashboard_list" : "Dashboard list",
-  "loading_dashboard" : "Discovering dashboards",
-  "loading_visualization": "Discovering visualization data",
-  "there_no_dashboard_item_found" : "There are no dashboard items found",
-  "tracker_capture" : "Tracker Capture",
-  "sync" : "Sync",
-  "upload_data_via_sms" : "Upload data via sms",
-  "upload_data_via_internet" : "Upload data via internet",
-  "import_summaries" : "Import summaries",
-  "aggregate_data" : "Aggregate data",
-  "tracked_entity_instances" : "Tracked entity instances",
-  "tracked_entity_enrollments" : "Tracked entity enrollments",
-  "events_for_tracker" : "Events for tracker",
-  "success" : "Success",
-  "failed" : "Failed",
-  "import_conflicts_errors" : "Import conflicts/errors",
-  "download_metadata" : "Download metadata",
-  "download_data" : "Download data",
-  "clear_local_data" : "Clear local data",
-  "clear_local_metadata" : "Clear local metadata",
-  "data_values" : "Data values",
-  "events" : "Events",
-  "data_entry" : "Data Entry",
-  "touch_to_select_organisation_unit" : "Touch to select organisation Unit",
-  "touch_to_select_entry_form" : "Touch to select entry form",
-  "touch_to_select_period" : "Touch to select period",
-  "data_entry_form_selection" : "Data Entry Form selection",
-  "data_dimension_selection" : "Data Dimension selection",
-  "touch_to_select_option" : "Touch to select option",
-  "period_selection":"Period selection",
-  "previous":"Previous",
-  "next" : "Next",
-  "there_is_no_period_to_select":"There is no period to select",
-  "organisation_unit_selection": "Organisation unit selection",
-  "organisation_unit" : "Organisation Unit",
-  "form" : "Form",
-  "period" : "Period",
-  "enter_data" : "Enter data",
-  "entry_form" : "Entry Form",
-  "available_indicators" : "Available indicators",
-  "complete" : "Complete",
-  "undo_complete" : "Undo Complete",
-  "completed_by" : "Completed by",
-  "on" : "on",
-  "please_wait" : "Please wait",
-  "data_entry_form_sections" : "Data Entry Form sections",
-  "completeness_information" : "Completeness information",
-  "full_name" : "Full name",
-  "username" : "Username",
-  "e_mail" : "E-mail",
-  "phone_number" : "Phone number",
-  "event_capture" : "Event Capture",
-  "touch_to_select_program" : "Touch to select program",
-  "columns" : "Columns",
-  "add" : "Add",
-  "event_register" : "Event Register",
-  "visible_header" : "Visible Header",
-  "save" : "Save",
-  "select_all" : "Select all",
-  "deselect_all" : "Deselect all",
-  "program" : "Program",
-  "program_selection" : "Program selection",
-  "tracked_entity_dashboard" : "Tracked Entity Dashboard",
-  "Registration" : "Registration",
-  "enrolling_organisation_unit" : "Enrolling organisation unit",
-  "enrolling_program" : "Enrolling Program",
-  "list_of_widgets" : "List of widgets",
-  "report" : "Reports",
-  "data_set_report" : "Data set report",
-  "standard_report" : "Standard report",
-  "report_name" : "Report name",
-  "report_view":"Report View",
-  "generate_report" : "Generate Report",
-  "help_search" : "Help search",
-  "search_help_by_title" : "Search help by title",
-  "system_info" : "System info",
-  "assigned_organisation_units" : "Assigned organisation units",
-  "user_information" : "User information",
-  "assigned_roles" : "Assigned roles",
-  "assigned_program" : "Assigned program",
-  "assigned_form" : "Assigned form",
-  "aggregate_status" : "Aggregate status",
-  "event_status" : "Event status",
-  "event_for_tracker_status" : "Event for tracker status",
-  "enrollments" : "Enrollments",
-  "preparing_table" : "Preparing table",
-  "loading_current_user_information": "Loading current user information",
-  "loading_settings" : "Loading settings",
-  "loading_help_contents" : "Loading help contents",
-  "loading" : "Loading ...",
-  "loading_profile_information" : "Loading profile information",
-  "loading_user_information" : "Loading user information",
-  "loading_entry_form_information" : "Loading entry form information",
-  "loading_available_local_instances" : "Loading available local instances",
-  "loading_indicators" : "Loading indicators",
-  "prepare_entry_form" : "Prepare entry form",
-  "loading_data_from_the_server" : "Loading data from the server",
-  "saving_data_from_server" : "Saving data from server",
-  "loading_current_user_authorities" : "Loading current user authorities",
-  "preparing_local_storage" : "Preparing local storage",
-  "loading_assigned_organisation_units" : "Loading assigned organisation units",
-  "assigned_organisation_units_have_been_loaded" :"Assigned organisation units have been loaded",
-  "assigned_organisation_units_have_been_saved" :"Assigned organisation units have been saved",
-  "saving_assigned_organisation_units" : "Saving assigned organisation units",
-  "loading_entry_forms" : "Loading entry forms",
-  "entry_forms_have_been_loaded" : "Entry forms have been loaded",
-  "saving_entry_forms" : "Saving entry forms",
-  "entry_form_have_been_saved" : "Entry form have been saved",
-  "loading_entry_form_sections" : "Loading entry form sections",
-  "entry_form_sections_have_been_loaded" : "Entry form sections have been loaded",
-  "saving_entry_form_sections" : "Saving entry form sections",
-  "entry_form_sections_have_been_saved" : "Entry form sections have been saved",
-  "loading_entry_form_fields" : "Loading entry form fields",
-  "entry_form_fields_have_been_loaded" : "Entry form fields have been loaded",
-  "saving_entry_form_fields" : "Saving entry form fields",
-  "entry_form_fields_have_been_saved" : "Entry form fields have been saved",
-  "loading_sms_programs" : "Loading programs",
-  "loading_sms_commands" : "Loading SMS commands",
-  "sms_commands_have_been_loaded" : "SMS commands have been loaded",
-  "saving_sms_commands" : "Saving SMS commands",
-  "sms_commands_have_been_saved" : "SMS commands have been saved",
-  "programs_have_been_loaded" : "Programs have been loaded",
-  "saving_programs" : "Saving programs",
-  "programs_have_been_saved" : "Programs have been saved",
-  "loading_program_stage_section" : "Loading program stage sections",
-  "program_stage_section_have_been_loaded" : "Program stage sections have been loaded",
-  "saving_program_stage_section" : "Saving program stage sections",
-  "program_stage_section_have_been_saved" : "Program stage sections have been saved",
-  "indicators_have_been_loaded" : "Indicators have been loaded",
-  "saving_sms_indicators" : "Saving indicators",
-  "indicators_have_been_saved" : "Indicators have been saved",
-  "reports_have_been_loaded" : "Reports have been loaded",
-  "saving_reports" : "Saving reports",
-  "reports_have_been_saved" : "Reports have been saved",
-  "loading_constants" : "Loading constants",
-  "constants_have_been_loaded" : "Constants have been loaded",
-  "saving_constants" : "Saving constants",
-  "constants_have_been_saved" : "Constants have been saved",
-  "loading_report_metadata" : "Loading report metadata",
-  "loading_available_local_data" : "Loading available local data",
-  "loading_entry_form_completeness_information" : "Loading entry form completeness information",
-  "loading_app_information" : "Loading app information",
-  "loading_system_information" : "Loading system information",
-  "loading_data_values_storage_status" : "Loading data values storage status",
-  "loading_events_storage_status" : "Loading events storage status",
-  "loading_enrollments_storage_status" : "Loading enrollments storage status",
-  "loading_assigned_programs" : "Loading assigned programs",
-  "loading_data_set_report_information" : "Loading data set report information",
-  "prepare_data_set_report" : "Preparing data set report",
-  "no_data_to_display" : "No data to display",
-  "there_is_no_option_to_select" : "There is no option to select",
-  "there_is_no_data_entry_form_to_select" : "There is no Data entry form to select",
-  "there_is_nothing_to_select" : "There is nothing to select",
-  "there_no_data_at_the_moment" : "There no data at the moment",
-  "there_is_no_program_to_select" : "There is no program to select",
-  "there_is_no_report_to_select" : "There is no report to select",
-  "there_is_no_widget_to_select" : "There is no widget to select",
-  "loading_reports" : "Loading reports",
-  "downloading_reports_from_server" : "Downloading reports from the server",
-  "prepare_local_storage_for_updates" : "Prepare local storage for updates",
-  "saving_reports_from_server" : "Saving reports from server"
+  "apps": "Apps",
+  "account": "Account",
+  "about": "About",
+  "synced": "Synced",
+  "not synced": "Not synced",
+  "profile": "Profile",
+  "help": "Help",
+  "logout": "Logout",
+  "settings": "Settings",
+  "app settings": "App setting",
+  "current language": "Current language",
+  "synchronization": "Synchronization",
+  "auto sync": "Auto sync",
+  "minutes": "Minutes",
+  "hours": "Hours",
+  "form label": "Form Label",
+  "display name": "Display Name",
+  "form name": "Form Name",
+  "form layout": "Form Layout",
+  "list layout": "List layout",
+  "table layout": "Table layout",
+  "data element per page": "Data elements per page(max)",
+  "dashboard": "Dashboard",
+  "there no dashboard found": "There are no dashboard found",
+  "search dashboard by name": "Search dashboard by name",
+  "dashboard list": "Dashboard list",
+  "loading dashboard": "Discovering dashboards",
+  "loading visualization": "Discovering visualization data",
+  "there no dashboard item found": "There are no dashboard items found",
+  "tracker capture": "Tracker Capture",
+  "sync": "Sync",
+  "upload data via sms": "Upload data via sms",
+  "upload data via internet": "Upload data via internet",
+  "import summaries": "Import summaries",
+  "aggregate data": "Aggregate data",
+  "tracked entity instances": "Tracked entity instances",
+  "tracked entity enrollments": "Tracked entity enrollments",
+  "events for tracker": "Events for tracker",
+  "success": "Success",
+  "failed": "Failed",
+  "import conflicts errors": "Import conflicts/errors",
+  "download metadata": "Download metadata",
+  "download data": "Download data",
+  "clear local data": "Clear local data",
+  "clear local metadata": "Clear local metadata",
+  "data values": "Data values",
+  "events": "Events",
+  "data entry": "Data Entry",
+  "touch to select organisation unit": "Touch to select organisation Unit",
+  "touch to select entry form": "Touch to select entry form",
+  "touch to select period": "Touch to select period",
+  "data entry form selection": "Data Entry Form selection",
+  "data dimension selection": "Data Dimension selection",
+  "touch to select option": "Touch to select option",
+  "period selection": "Period selection",
+  "previous": "Previous",
+  "next": "Next",
+  "there is no period to select": "There is no period to select",
+  "organisation unit selection": "Organisation unit selection",
+  "organisation unit": "Organisation Unit",
+  "form": "Form",
+  "period": "Period",
+  "enter data": "Enter data",
+  "entry form": "Entry Form",
+  "available indicators": "Available indicators",
+  "complete": "Complete",
+  "undo complete": "Undo Complete",
+  "completed by": "Completed by",
+  "on": "on",
+  "please wait": "Please wait",
+  "data entry form sections": "Data Entry Form sections",
+  "completeness information": "Completeness information",
+  "full name": "Full name",
+  "username": "Username",
+  "e mail": "E-mail",
+  "phone number": "Phone number",
+  "event capture": "Event Capture",
+  "touch to select program": "Touch to select program",
+  "columns": "Columns",
+  "add": "Add",
+  "event register": "Event Register",
+  "visible header": "Visible Header",
+  "save": "Save",
+  "select all": "Select all",
+  "deselect all": "Deselect all",
+  "program": "Program",
+  "program selection": "Program selection",
+  "tracked entity dashboard": "Tracked Entity Dashboard",
+  "Registration": "Registration",
+  "enrolling organisation unit": "Enrolling organisation unit",
+  "enrolling program": "Enrolling Program",
+  "list of widgets": "List of widgets",
+  "report": "Reports",
+  "data set report": "Data set report",
+  "standard report": "Standard report",
+  "report name": "Report name",
+  "report view": "Report View",
+  "generate report": "Generate Report",
+  "help search": "Help search",
+  "search help by title": "Search help by title",
+  "system info": "System info",
+  "assigned organisation units": "Assigned organisation units",
+  "user information": "User information",
+  "assigned roles": "Assigned roles",
+  "assigned program": "Assigned program",
+  "assigned form": "Assigned form",
+  "aggregate status": "Aggregate status",
+  "event status": "Event status",
+  "event for tracker status": "Event for tracker status",
+  "enrollments": "Enrollments",
+  "preparing table": "Preparing table",
+  "loading current user information": "Loading current user information",
+  "loading settings": "Loading settings",
+  "loading help contents": "Loading help contents",
+  "loading": "Loading ...",
+  "loading profile information": "Loading profile information",
+  "loading user information": "Loading user information",
+  "loading entry form information": "Loading entry form information",
+  "loading available local instances": "Loading available local instances",
+  "loading indicators": "Loading indicators",
+  "prepare entry form": "Prepare entry form",
+  "loading data from the server": "Loading data from the server",
+  "saving data from server": "Saving data from server",
+  "loading current user authorities": "Loading current user authorities",
+  "preparing local storage": "Preparing local storage",
+  "loading assigned organisation units": "Loading assigned organisation units",
+  "assigned organisation units have been loaded":
+    "Assigned organisation units have been loaded",
+  "assigned organisation units have been saved":
+    "Assigned organisation units have been saved",
+  "saving assigned organisation units": "Saving assigned organisation units",
+  "loading entry forms": "Loading entry forms",
+  "entry forms have been loaded": "Entry forms have been loaded",
+  "saving entry forms": "Saving entry forms",
+  "entry form have been saved": "Entry form have been saved",
+  "loading entry form sections": "Loading entry form sections",
+  "entry form sections have been loaded":
+    "Entry form sections have been loaded",
+  "saving entry form sections": "Saving entry form sections",
+  "entry form sections have been saved": "Entry form sections have been saved",
+  "loading entry form fields": "Loading entry form fields",
+  "entry form fields have been loaded": "Entry form fields have been loaded",
+  "saving entry form fields": "Saving entry form fields",
+  "entry form fields have been saved": "Entry form fields have been saved",
+  "loading programs": "Loading programs",
+  "loading sms commands": "Loading SMS commands",
+  "sms commands have been loaded": "SMS commands have been loaded",
+  "saving sms commands": "Saving SMS commands",
+  "sms commands have been saved": "SMS commands have been saved",
+  "programs have been loaded": "Programs have been loaded",
+  "saving programs": "Saving programs",
+  "programs have been saved": "Programs have been saved",
+  "loading program stage section": "Loading program stage sections",
+  "program stage section have been loaded":
+    "Program stage sections have been loaded",
+  "saving program stage section": "Saving program stage sections",
+  "program stage section have been saved":
+    "Program stage sections have been saved",
+  "indicators have been loaded": "Indicators have been loaded",
+  "saving sms indicators": "Saving indicators",
+  "indicators have been saved": "Indicators have been saved",
+  "reports have been loaded": "Reports have been loaded",
+  "saving reports": "Saving reports",
+  "reports have been saved": "Reports have been saved",
+  "loading constants": "Loading constants",
+  "constants have been loaded": "Constants have been loaded",
+  "saving constants": "Saving constants",
+  "constants have been saved": "Constants have been saved",
+  "loading report metadata": "Loading report metadata",
+  "loading available local data": "Loading available local data",
+  "loading entry form completeness information":
+    "Loading entry form completeness information",
+  "loading app information": "Loading app information",
+  "loading system information": "Loading system information",
+  "loading data values storage status": "Loading data values storage status",
+  "loading events storage status": "Loading events storage status",
+  "loading enrollments storage status": "Loading enrollments storage status",
+  "loading assigned programs": "Loading assigned programs",
+  "loading data set report information": "Loading data set report information",
+  "prepare data set report": "Preparing data set report",
+  "no data to display": "No data to display",
+  "there is no option to select": "There is no option to select",
+  "there is no data entry form to select":
+    "There is no Data entry form to select",
+  "there is nothing to select": "There is nothing to select",
+  "there no data at the moment": "There no data at the moment",
+  "there is no program to select": "There is no program to select",
+  "there is no report to select": "There is no report to select",
+  "there is no widget to select": "There is no widget to select",
+  "loading reports": "Loading reports",
+  "downloading reports from server": "Downloading reports from the server",
+  "prepare local storage for updates": "Prepare local storage for updates",
+  "saving reports from server": "Saving reports from server"
 }
-
