--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -1,228 +1,228 @@
 {
-  "innovation_in_every_dimension": "Inovação em todas as dimensões",
-  "establishing_connection_to_server": "Estabelecendo conexão ao servidor",
-  "aggregate_metadata": "Metadados agregados",
-  "Event_and_tracker_metadata": "Metadados de eventos e de tracker",
-  "report_metadata": "Metadados de relatorio",
-  "enter_server_address": "Digite o endereço do servidor",
+  "innovation in every dimension": "Inovação em todas as dimensões",
+  "establishing connection to server": "Estabelecendo conexão ao servidor",
+  "aggregate metadata": "Metadados agregados",
+  "Event and tracker metadata": "Metadados de eventos e de tracker",
+  "report metadata": "Metadados de relatorio",
+  "enter_server_ address": "Digite o endereço do servidor",
   "enter_username": "Insira nome de usuário",
   "enter_password": "Digite a senha",
   "login": "Entrar",
-  "powered_by": "Distribuído por",
-  "offline_instances": "Instâncias off-line",
+  "powered by": "Distribuído por",
+  "offline instances": "Instâncias off-line",
   "or": "ou",
   "apps": "Aplicativos",
   "account": "Conta",
   "about": "Sobre",
   "synced": "Sincronizado",
-  "not_synced": "Não sincronizado",
+  "not synced": "Não sincronizado",
   "profile": "Perfil",
   "help": "Ajuda",
   "logout": "Sair",
   "settings": "Configurações",
-  "app_settings": "Configuração do aplicativo",
-  "current_language": "Idioma actual",
+  "app settings": "Configuração do aplicativo",
+  "current language": "Idioma actual",
   "synchronization": "Sincronização",
-  "auto_sync": "Sincronização automática",
+  "auto sync": "Sincronização automática",
   "minutes": "Minutos",
   "hours": "Horas",
-  "form_label": "Etiqueta de formulário",
-  "display_name": "Mostrar nome",
-  "form_name": "Nome do formulário",
-  "form_layout": "Disposição do formulário",
-  "list_layout": "Disposição da lista",
-  "table_layout": "Disposição da tabela",
-  "data_element_per_page": "Elementos de dados por página (máximo)",
+  "form label": "Etiqueta de formulário",
+  "display name": "Mostrar nome",
+  "form name": "Nome do formulário",
+  "form layout": "Disposição do formulário",
+  "list layout": "Disposição da lista",
+  "table layout": "Disposição da tabela",
+  "data element per page": "Elementos de dados por página (máximo)",
   "dashboard": "Painel de instrumentos",
-  "tracker_capture": "Tracker capture",
+  "tracker capture": "Tracker capture",
   "sync": "Sincronizar",
-  "upload_data_via_sms": "Carregar dados via sms",
-  "upload_data_via_internet": "Carregar dados via internet",
-  "import_summaries": "Resumos de importação",
-  "aggregate_data": "Dados agregados",
-  "tracked_entity_instances": "Instâncias de entidades rastreadas",
-  "tracked_entity_enrollments": "Registo de entidades rastreadas",
-  "events_for_tracker": "Eventos por rastrear",
+  "upload data via sms": "Carregar dados via sms",
+  "upload data via internet": "Carregar dados via internet",
+  "import summaries": "Resumos de importação",
+  "aggregate data": "Dados agregados",
+  "tracked entity instances": "Instâncias de entidades rastreadas",
+  "tracked entity enrollments": "Registo de entidades rastreadas",
+  "events for tracker": "Eventos por rastrear",
   "success": "Sucesso",
   "failed": "Falhou",
-  "import_conflicts_errors": "Conflitos/erros de importação",
-  "download_metadata": "Baixar metadados",
-  "download_data": "Baixar dados",
-  "clear_local_data": "Limpe os dados locais",
-  "clear_local_metadata": "Metadados locais claros",
-  "data_values": "Valores de dados",
+  "import conflicts errors": "Conflitos/erros de importação",
+  "download metadata": "Baixar metadados",
+  "download data": "Baixar dados",
+  "clear local data": "Limpe os dados locais",
+  "clear local metadata": "Metadados locais claros",
+  "data values": "Valores de dados",
   "events": "Eventos",
-  "data_entry": "Entrada de dados",
-  "touch_to_select_organisation_unit":
+  "data entry": "Entrada de dados",
+  "touch to select organisation unit":
     "Toque para selecionar a unidade organizacional",
-  "touch_to_select_entry_form": "Toque para selecionar o formulário de dados",
-  "touch_to_select_period": "Toque para selecionar o período",
-  "data_entry_form_selection": "Seleção do formulário de entrada de dados",
-  "data_dimension_selection": "Seleção de dimensão de dados",
-  "touch_to_select_option": "Toque para selecionar a opção",
-  "period_selection": "Selecção do período",
+  "touch to select entry form": "Toque para selecionar o formulário de dados",
+  "touch to select period": "Toque para selecionar o período",
+  "data entry form selection": "Seleção do formulário de entrada de dados",
+  "data dimension selection": "Seleção de dimensão de dados",
+  "touch to select option": "Toque para selecionar a opção",
+  "period selection": "Selecção do período",
   "previous": "Anterior",
   "next": "Próximo",
-  "there_is_no_period_to_select": "Não há um período por seleccionar",
-  "organisation_unit_selection": "Selecção da unidade organizacional",
-  "organisation_unit": "Unidade organizacional",
+  "there is no period to select": "Não há um período por seleccionar",
+  "organisation unit selection": "Selecção da unidade organizacional",
+  "organisation unit": "Unidade organizacional",
   "form": "Formulário",
   "period": "Período",
-  "enter_data": "Inserir dados",
-  "entry_form": "Formulário de dados",
-  "available_indicators": "Indicadores disponíveis",
+  "enter data": "Inserir dados",
+  "entry form": "Formulário de dados",
+  "available indicators": "Indicadores disponíveis",
   "complete": "Completo",
-  "undo_complete": "Anular completo",
-  "completed_by": "Completado por",
+  "undo complete": "Anular completo",
+  "completed by": "Completado por",
   "on": "em",
-  "please_wait": "Por favor, espere",
-  "data_entry_form_sections": "Secções de formulário de entrada de dados",
-  "completeness_information": "Informação de integridade",
-  "full_name": "Nome completo",
+  "please wait": "Por favor, espere",
+  "data entry form sections": "Secções de formulário de entrada de dados",
+  "completeness information": "Informação de integridade",
+  "full name": "Nome completo",
   "username": "Nome de usuário",
-  "e_mail": "E-mail",
-  "phone_number": "Número de telefone",
-  "event_capture": "Captação de eventos",
-  "touch_to_select_program": "Toque para seleccionar o programa",
+  "e mail": "E-mail",
+  "phone number": "Número de telefone",
+  "event capture": "Captação de eventos",
+  "touch to select program": "Toque para seleccionar o programa",
   "columns": "Colunas",
   "add": "Adicionar",
-  "event_register": "Registar evento",
-  "visible_header": "Cabeçalho visível",
+  "event register": "Registar evento",
+  "visible header": "Cabeçalho visível",
   "save": "Gravar",
-  "select_all": "Seleccionar tudo",
-  "deselect_all": "Desmarcar todos",
+  "select all": "Seleccionar tudo",
+  "deselect all": "Desmarcar todos",
   "program": "Programa",
-  "program_selection": "Seleção do programa",
-  "tracked_entity_dashboard": "Painel de instrumentos da entidade rastreada",
+  "program selection": "Seleção do programa",
+  "tracked entity dashboard": "Painel de instrumentos da entidade rastreada",
   "Registration": "Registo",
-  "enrolling_organisation_unit": "Unidade de organização de registo",
-  "enrolling_program": "Programa de registo",
-  "list_of_widgets": "Lista de widgets",
+  "enrolling organisation unit": "Unidade de organização de registo",
+  "enrolling program": "Programa de registo",
+  "list of widgets": "Lista de widgets",
   "reports": "Relatórios",
-  "data_set_report": "Relatório de ficha",
-  "standard_report": "Relatório padrão",
-  "report_name": "Nome do relatório",
-  "report_view": "Visualização do relatório",
-  "generate_report": "Gerar relatório",
-  "help_search": "Ajuda na busca",
-  "search_help_by_title": "Procura de ajuda por título",
-  "dashboard_list": "Lista de painéis",
-  "system_info": "Informação do sistema",
-  "assigned_organisation_units": "Unidades organizacionais associadas",
-  "user_information": "Informação do usuário",
-  "assigned_roles": "Funções atribuídas",
-  "assigned_program": "Programa associadas",
-  "assigned_form": "Formulário associadas",
-  "aggregate_status": "Estado de agregação",
-  "event_status": "Estado do evento",
-  "event_for_tracker_status": "Evento para estado de tracker",
+  "data set report": "Relatório de ficha",
+  "standard report": "Relatório padrão",
+  "report name": "Nome do relatório",
+  "report view": "Visualização do relatório",
+  "generate report": "Gerar relatório",
+  "help search": "Ajuda na busca",
+  "search help by title": "Procura de ajuda por título",
+  "dashboard list": "Lista de painéis",
+  "system info": "Informação do sistema",
+  "assigned organisation units": "Unidades organizacionais associadas",
+  "user information": "Informação do usuário",
+  "assigned roles": "Funções atribuídas",
+  "assigned program": "Programa associadas",
+  "assigned form": "Formulário associadas",
+  "aggregate status": "Estado de agregação",
+  "event status": "Estado do evento",
+  "event for tracker status": "Evento para estado de tracker",
   "enrollments": "Inscrições",
-  "preparing_table": "Preparando tabela",
-  "loading_current_user_information":
+  "preparing table": "Preparando tabela",
+  "loading current user information":
     "Carregando informações actualizadas do usuário",
-  "loading_settings": "Configurações de carregamento",
-  "loading_help_contents": "Carregando conteúdo da ajuda",
+  "loading settings": "Configurações de carregamento",
+  "loading help contents": "Carregando conteúdo da ajuda",
   "loading": "Carregando ...",
-  "loading_profile_information": "Carregando informações do perfil",
-  "loading_user_information": "Carregando informações do usuário",
-  "loading_entry_form_information":
+  "loading profile information": "Carregando informações do perfil",
+  "loading user information": "Carregando informações do usuário",
+  "loading entry form information":
     "Carregando informações do formulário de entrada de dados",
-  "loading_available_local_instances":
+  "loading available local instances":
     "Carregando instâncias locais disponíveis",
-  "loading_indicators": "Carregando indicadores",
-  "prepare_entry_form": "Preparar formulário de entrada de dados",
-  "loading_data_from_the_server": "Carregando dados do servidor",
-  "saving_data_from_server": "Salvando dados do servidor",
-  "loading_current_user_authorities":
+  "loading indicators": "Carregando indicadores",
+  "prepare entry form": "Preparar formulário de entrada de dados",
+  "loading data from the server": "Carregando dados do servidor",
+  "saving data from server": "Salvando dados do servidor",
+  "loading current user authorities":
     "Carregando as autoridades actuais dos usuários",
-  "preparing_local_storage": "Preparando armazenamento local",
-  "loading_assigned_organisation_units":
+  "preparing local storage": "Preparando armazenamento local",
+  "loading assigned organisation units":
     "Carregando unidades de organização associadas",
-  "assigned_organisation_units_have_been_loaded":
+  "assigned organisation units have been loaded":
     "Unidades organizacionais associadas foram carregadas",
-  "assigned_organisation_units_have_been_saved":
+  "assigned organisation units have been saved":
     "Unidades organizacionais associadas foram gravadas",
-  "saving_assigned_organisation_units":
+  "saving assigned organisation units":
     "Gravando unidades de organização associadas",
-  "loading_entry_forms": "Carregando formulários de entrada de dados",
-  "entry_forms_have_been_loaded":
+  "loading entry forms": "Carregando formulários de entrada de dados",
+  "entry forms have been loaded":
     "Formulários de entrada de dados foram carregados",
-  "saving_entry_forms": "Gravando formulários de entrada",
-  "entry_form_have_been_saved": "Formulário de entrada de dados foi gravado",
-  "loading_entry_form_sections":
+  "saving entry forms": "Gravando formulários de entrada",
+  "entry form have been saved": "Formulário de entrada de dados foi gravado",
+  "loading entry form sections":
     "Carregando secções do formulário de entrada de dados",
-  "entry_form_sections_have_been_loaded":
+  "entry form sections have been loaded":
     "Secções de formulário de entrada de dados foram carregadas",
-  "saving_entry_form_sections":
+  "saving entry form sections":
     "Gravando secções de formulário de entrada de dados",
-  "entry_form_sections_have_been_saved":
+  "entry form sections have been saved":
     "Secções de formulário de entrada de dados foram gravadas",
-  "loading_entry_form_fields":
+  "loading entry form fields":
     "Carregando os campos do formulário de entrada de dados",
-  "entry_form_fields_have_been_loaded":
+  "entry form fields have been loaded":
     "Campos de formulário de entrada de dados foram carregados",
-  "saving_entry_form_fields":
+  "saving entry form fields":
     "Gravando campos do formulário de entrada de dados",
-  "entry_form_fields_have_been_saved":
+  "entry form fields have been saved":
     "Campos do formulário de entrada de dados foram gravados",
-  "loading_sms_programs": "Carregando programas",
-  "loading_sms_commands": "Carregando comandos SMS",
-  "sms_commands_have_been_loaded": "Comandos SMS foram carregados",
-  "saving_sms_commands": "Gravando comandos SMS",
-  "sms_commands_have_been_saved": "Comandos SMS foram gravados",
-  "programs_have_been_loaded": "Programas foram carregados",
-  "saving_programs": "Gravando programas",
-  "programs_have_been_saved": "Programas foram gravados",
-  "loading_program_stage_section":
+  "loading programs": "Carregando programas",
+  "loading sms commands": "Carregando comandos SMS",
+  "sms commands have been loaded": "Comandos SMS foram carregados",
+  "saving sms commands": "Gravando comandos SMS",
+  "sms commands have been saved": "Comandos SMS foram gravados",
+  "programs have been loaded": "Programas foram carregados",
+  "saving programs": "Gravando programas",
+  "programs have been saved": "Programas foram gravados",
+  "loading program stage section":
     "Carregando as secções do estágio do programa",
-  "program_stage_section_have_been_loaded":
+  "program stage section have been loaded":
     "Secções de estágio do programa foram carregadas",
-  "saving_program_stage_section": "Gravando secções do estágio do programa",
-  "program_stage_section_have_been_saved":
+  "saving program stage section": "Gravando secções do estágio do programa",
+  "program stage section have been saved":
     "Secções de estágio de programa foram gravadas",
-  "indicators_have_been_loaded": "Indicadores foram carregados",
-  "saving_sms_indicators": "Gravando indicadores",
-  "indicators_have_been_saved": "Indicadores foram gravados",
-  "reports_have_been_loaded": "Relatórios foram carregados",
-  "saving_reports": "Gravando relatórios",
-  "reports_have_been_saved": "Relatórios foram gravados",
-  "loading_constants": "Carregando constantes",
-  "constants_have_been_loaded": "Constantes foram carregadas",
-  "saving_constants": "Gravando constantes",
-  "constants_have_been_saved": "Constantes foram gravadas",
-  "loading_report_metadata": "Carregando metadados do relatório",
-  "loading_available_local_data": "Carregando dados locais disponíveis",
-  "loading_entry_form_completeness_information":
+  "indicators have been loaded": "Indicadores foram carregados",
+  "saving sms indicators": "Gravando indicadores",
+  "indicators have been saved": "Indicadores foram gravados",
+  "reports have been loaded": "Relatórios foram carregados",
+  "saving reports": "Gravando relatórios",
+  "reports have been saved": "Relatórios foram gravados",
+  "loading constants": "Carregando constantes",
+  "constants have been loaded": "Constantes foram carregadas",
+  "saving constants": "Gravando constantes",
+  "constants have been saved": "Constantes foram gravadas",
+  "loading report metadata": "Carregando metadados do relatório",
+  "loading available local data": "Carregando dados locais disponíveis",
+  "loading entry form completeness information":
     "Carregando informações de integridade do formulário de entrada",
-  "loading_app_information": "Carregando informações do aplicativo",
-  "loading_system_information": "Carregando informações do sistema",
-  "loading_data_values_storage_status":
+  "loading app information": "Carregando informações do aplicativo",
+  "loading system information": "Carregando informações do sistema",
+  "loading data values storage status":
     "Carregando estado de armazenamento de dados",
-  "loading_events_storage_status":
+  "loading events storage status":
     "Carregando estado de armazenamento de eventos",
-  "loading_enrollments_storage_status":
+  "loading enrollments storage status":
     "Carregando estado de armazenamento de inscrições",
-  "loading_assigned_programs": "Carregando programas atribuídos",
-  "loading_data_set_report_information":
+  "loading assigned programs": "Carregando programas atribuídos",
+  "loading data set report information":
     "Carregando informações do relatório de ficha",
-  "prepare_data_set_report": "Preparando o relatório de ficha",
-  "no_data_to_display": "Nenhum dado a ser exibido",
-  "there_is_no_option_to_select": "Não há opção seleccionar",
-  "there_is_no_data_entry_form_to_select":
+  "prepare data set report": "Preparando o relatório de ficha",
+  "no data to display": "Nenhum dado a ser exibido",
+  "there is no option to select": "Não há opção seleccionar",
+  "there is no data entry form to select":
     "Não há formulário de entrada de dados a seleccionar",
-  "there_is_nothing_to_select": "Não há nada para seleccionar",
-  "there_no_data_at_the_moment": "Não há dados no momento",
-  "there_is_no_program_to_select": "Não há programa para seleccionar",
-  "there_is_no_report_to_select": "Não há relatório para seleccionar",
-  "there_is_no_widget_to_select": "Não há nenhum widget para seleccionar",
-  "loading_reports": "Carregando relatórios",
-  "downloading_reports_from_server": "Transferir relatórios do servidor",
-  "prepare_local_storage_for_updates":
+  "there is nothing to select": "Não há nada para seleccionar",
+  "there no data at the moment": "Não há dados no momento",
+  "there is no program to select": "Não há programa para seleccionar",
+  "there is no report to select": "Não há relatório para seleccionar",
+  "there is no widget to select": "Não há nenhum widget para seleccionar",
+  "loading reports": "Carregando relatórios",
+  "downloading reports from server": "Transferir relatórios do servidor",
+  "prepare local storage for updates":
     "Preparar armazenamento local para actualizações",
-  "saving_reports_from_server": "Gravando relatórios do servidor",
-  "there_no_dashboard_found": "There are no dashboard found",
-  "search_dashboard_by_name": "Search dashboard by name",
-  "loading_dashboard": "Discovering dashboards",
-  "loading_visualization": "Discovering visualization data",
-  "there_no_dashboard_item_found": "There are no dashboard items found"
+  "saving reports from server": "Gravando relatórios do servidor",
+  "there no dashboard found": "There are no dashboard found",
+  "search dashboard by name": "Search dashboard by name",
+  "loading dashboard": "Discovering dashboards",
+  "loading visualization": "Discovering visualization data",
+  "there no dashboard item found": "There are no dashboard items found"
 }
